# sunfish3

./: .gitignore  .syntastic_cpp_config  LICENSE.txt  Makefile  README.md  analyze_prof.pl  backup.sh  book.bin.org  dedupe.pl  learn.conf  network.conf  rcopy.pl  rmove.pl  sunfish3.sln  sunfish3.vcxproj  sunfish3.vcxproj.filters
Problem/: problem001.csa  problem002.csa  problem003.csa  problem004.csa
book/: Book.cpp  Book.h  BookGenerator.cpp  BookGenerator.h
config/: Config.cpp  Config.h
core/: def.h
cui/: book.cpp  dev.cpp  learn.cpp  network.cpp  problem.cpp  profile.cpp  sunfish.cpp  sunfish.h  test.cpp
learn/: Learn.cpp  Learn.h
logger/: Logger.cpp  Logger.h
network/: .CsaClient.cpp.swp  Connection.cpp  Connection.h  CsaClient.cpp  CsaClient.h  (+3 more)
src/: CMakeLists.txt
src/book/: Book.h  BookGenerator.h  CMakeLists.txt
src/config/: CMakeLists.txt  Config.cpp
src/core/: CMakeLists.txt  bmi.h  def.h  sse.h
src/core/base/: Piece.cpp  Piece.h  Position.cpp  Position.h  Square.cpp  Square.h
src/core/board/: Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  Hand.h  Zobrist.cpp  Zobrist.h
src/core/dev/: CodeGenerator.cpp  CodeGenerator.h  MoveGenChecker.cpp  MoveGeneratorExpr.cpp  MoveGeneratorExpr.h
src/core/move/: Move.h  MoveGenerator.cpp  MoveGenerator.h  MoveTable.cpp  MoveTable.h  Moves.h
src/core/record/: CsaReader.cpp  Record.cpp
src/core/util/: Data.cpp  Data.h  FileList.h  Memory.h  Random.h  Timer.h  Wildcard.cpp  Wildcard.h
src/cui/: CMakeLists.txt  book.cpp  config.h  dev.cpp  learning.cpp  network.cpp  problem.cpp  profile.cpp  sunfish.cpp  sunfish.h  test.cpp
src/cui/console/: ConsoleManager.cpp  ConsoleManager.h
src/cui/program_options/: ProgramOptions.h
src/cui/solve/: Solver.h
src/learn/: CMakeLists.txt  Learn.cpp
src/learning/: BatchLearning.cpp  BatchLearning.h  CMakeLists.txt  FV.h  Learning.cpp  Learning.h  LearningConfig.h  LearningTemplates.h  OnlineLearning.cpp  OnlineLearning.h
src/logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/network/: CMakeLists.txt  CsaClient.cpp  CsaClient.h  RemainingTime.h
src/searcher/: CMakeLists.txt  RandomSearcher.h  SearchInfo.h  Searcher.cpp  Searcher.h
src/searcher/eval/: EvaluateEntity.h  Evaluator.cpp  Evaluator.h  Material.cpp  Material.h  Value.h  material_values.h
src/searcher/history/: History.h
src/searcher/mate/: Mate.cpp  Mate.h  MateHistory.h
src/searcher/progress/: Progression.cpp  Progression.h
src/searcher/see/: See.cpp  See.h  SeeEntity.h  SeeTable.h
src/searcher/shek/: HandSet.h  ShekEntity.h
src/searcher/table/: HashTable.h
src/searcher/time/: TimeManager.cpp  TimeManager.h
src/searcher/tree/: NodeStat.h  PV.h  Tree.cpp  Tree.h  Worker.cpp  Worker.h
src/searcher/tt/: TT.h  TTE.cpp  TTE.h
src/test/: Test.h
src/test/core/: BitboardTest.cpp  BoardTest.cpp  CsaReaderTest.cpp  HandTest.cpp  MoveGeneratorTest.cpp  MoveTest.cpp  MovesTest.cpp  PieceTest.cpp  PositionTest.cpp  SquareTest.cpp  WildcardTest.cpp  ZobristTest.cpp
src/test/network/: CsaClientTest.cpp
src/test/searcher/: EvaluateEntityTest.cpp  EvaluateTableTest.cpp  EvaluatorTest.cpp  MateTest.cpp  SearcherTest.cpp  SeeTest.cpp  ShekTest.cpp  TreeTest.cpp
(+123 files in other folders)
